test/libsolidity/syntaxTests/nameAndTypeResolution/experimental_pragma_unknown_string_literal.sol
pragma experimental unsupportedName;
// ----
// SyntaxError: (0-36): Unsupported experimental feature name.
